--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -41,6 +41,23 @@ layout: null
     .break-anywhere { overflow-wrap: anywhere; word-break: break-word; }
     /* 避免粘性头部遮挡锚点位置 */
     section[id] { scroll-margin-top: 5.5rem; }
+    /* 首屏标题强调样式 */
+    .hero-glow {
+      text-shadow: 0 1px 0 rgba(255,255,255,.35), 0 12px 30px rgba(2,6,23,.12);
+    }
+    .dark .hero-glow {
+      text-shadow: 0 2px 18px rgba(255,255,255,.12);
+    }
+    .hero-wash {
+      position: absolute; inset: -8rem -4rem auto -4rem; height: 18rem;
+      background: radial-gradient(1200px 300px at 20% 30%, rgba(99,102,241,0.15), transparent 60%),
+                  radial-gradient(900px 240px at 10% 80%, rgba(6,182,212,0.12), transparent 65%);
+      pointer-events: none;
+    }
+    .dark .hero-wash {
+      background: radial-gradient(1200px 300px at 20% 30%, rgba(99,102,241,0.18), transparent 60%),
+                  radial-gradient(900px 240px at 10% 80%, rgba(6,182,212,0.16), transparent 65%);
+    }
   </style>
 </head>
 <body class="bg-zinc-50 text-zinc-900 dark:bg-zinc-950 dark:text-zinc-100">
@@ -106,42 +123,43 @@ layout: null
     <div class="absolute inset-0 bg-gradient-to-b from-indigo-50 via-zinc-50 to-transparent dark:from-indigo-950/20 dark:via-zinc-950 dark:to-transparent"></div>
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-14 md:py-24 relative">
       <div class="grid lg:grid-cols-2 gap-8 md:gap-10 items-center">
-        <div>
+        <div class="relative">
           <!-- 标语对 -->
+          <div class="hero-wash"></div>
           <div class="mb-6">
-            <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold leading-snug md:leading-tight text-balance break-anywhere hyphens-auto">
+            <h1 class="hero-glow text-4xl sm:text-5xl md:text-6xl font-extrabold tracking-tight leading-tight text-balance break-anywhere hyphens-auto">
               应用觉醒，化身智能体
             </h1>
-            <p class="mt-3 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
+            <p class="mt-4 text-xl sm:text-2xl leading-relaxed text-zinc-800 dark:text-zinc-100/95 max-w-2xl md:max-w-3xl text-pretty break-anywhere hyphens-auto">
               对话替代点击，智能直达体验。
             </p>
           </div>
-          <div id="hero-variants" class="relative">
+          <div id="hero-variants" class="relative mt-4 p-4 rounded-2xl border border-zinc-200/70 dark:border-zinc-800/70 bg-white/50 dark:bg-zinc-900/30 backdrop-blur-sm">
             <!-- 变体 A（默认） -->
             <div class="hero-variant" data-variant="a">
-              <h3 class="text-2xl md:text-3xl font-bold text-balance break-anywhere">从“点击”到“对话”</h3>
-              <p class="mt-4 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
+              <h3 class="text-xl md:text-2xl font-semibold text-zinc-800 dark:text-zinc-200 opacity-80 text-balance break-anywhere">从“点击”到“对话”</h3>
+              <p class="mt-4 text-sm sm:text-base text-zinc-600 dark:text-zinc-300/80 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
                 让应用开口说话，主动服务，不再是冷冰冰的点击和菜单，而是能理解意图、直接行动的智能体。收集上下文，守护安全执行，解锁全新的智能体验——让云端大脑与本地行动无缝衔接。
               </p>
             </div>
             <!-- 变体 B（更大胆） -->
             <div class="hero-variant hidden" data-variant="b">
-              <h3 class="text-2xl md:text-3xl font-bold text-balance break-anywhere">上下文创造智能</h3>
-              <p class="mt-4 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
+              <h3 class="text-xl md:text-2xl font-semibold text-zinc-800 dark:text-zinc-200 opacity-80 text-balance break-anywhere">上下文创造智能</h3>
+              <p class="mt-4 text-sm sm:text-base text-zinc-600 dark:text-zinc-300/80 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
                 AI 不只是大语言模型，更是“上下文”。通过把设备信号、历史与应用状态组织为语义、情景与程序性记忆，NeuronKit 让代理能做出更相关、及时的决策。上下文越丰富，智能越到位，体验也更贴合真实场景。
               </p>
             </div>
             <!-- 变体 C（点击流 → 对话流；电商 → Agentic 电商） -->
             <div class="hero-variant hidden" data-variant="c">
-              <h3 class="text-2xl md:text-3xl font-bold text-balance break-anywhere">面向信任的设备侧沙箱</h3>
-              <p class="mt-4 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
+              <h3 class="text-xl md:text-2xl font-semibold text-zinc-800 dark:text-zinc-200 opacity-80 text-balance break-anywhere">面向信任的设备侧沙箱</h3>
+              <p class="mt-4 text-sm sm:text-base text-zinc-600 dark:text-zinc-300/80 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
                 在边缘安全地运行代理触发的动作。不同于云端沙箱，NeuronKit 在设备上直接实施能力模型，保障隐私、低时延与细粒度控制。敏感能力仅在明确策略下执行，并始终保留安全与人的监督。
               </p>
             </div>
             <!-- 变体 D（云端“脑”，设备“手”） -->
             <div class="hero-variant hidden" data-variant="d">
-              <h3 class="text-2xl md:text-3xl font-bold text-balance break-anywhere">为现有应用插上“智能插件”</h3>
-              <p class="mt-4 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
+              <h3 class="text-xl md:text-2xl font-semibold text-zinc-800 dark:text-zinc-200 opacity-80 text-balance break-anywhere">为现有应用插上“智能插件”</h3>
+              <p class="mt-4 text-sm sm:text-base text-zinc-600 dark:text-zinc-300/80 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
                 无需大改造，即可为现有应用加上 Agentic 能力。NeuronKit 以中间件形式即插即用：注册功能、采集上下文并启用安全自动化。企业可以立刻为移动或 IoT 应用接入对话式 AI，解锁新业务与更高参与度。
               </p>
             </div>
