--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -282,7 +282,7 @@ flowchart LR
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
             <h3 class="font-semibold text-lg">以“加装”为先，而非重写</h3>
           </div>
-          <p class="mt-2 text-zinc-700 dark:text-zinc-300">最小扰动地把现有应用与设备升级为智能体系统。无需重建遗留平台，通过中间件叠加上下文、对话与安全自动化——延长现有投入的寿命与价值。</p>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">最小改动地把现有应用与设备升级为智能体系统。无需重建现存平台，通过中间件叠加上下文、对话与安全自动化——延长现有投入的寿命与价值。</p>
         </div>
       </div>
     </div>
@@ -314,7 +314,7 @@ flowchart LR
               <li>Agentic 电商与超级应用</li>
               <li>智能家居与 IoT 控制</li>
               <li>现场服务、物流与运营</li>
-              <li>注重同意与隐私的医金场景</li>
+              <li>注重同意与隐私的医疗与金融场景</li>
             </ul>
             <h3 class="mt-6 font-semibold text-lg">内置防护</h3>
             <ul class="mt-3 space-y-2 text-zinc-700 dark:text-zinc-300 list-disc list-inside">
