--- a/en/neuronkit/insights/index.html
+++ b/en/neuronkit/insights/index.html
@@ -45,7 +45,7 @@
         <div class="mt-1">
           <div class="px-3 text-xs uppercase tracking-wide text-zinc-500">Insights</div>
           <a href="/en/neuronkit/whitepaper/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">E‑commerce Reinvented</a>
-          <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">From Clicks to Conversations: A Visual Guide</a>
+          <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">From Clicks to Conversations: A Visual Guide</a>
           <a href="/en/neuronkit/insights/sandboxing-for-agents/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">Sandboxing Agentic Systems</a>
           <a href="/en/neuronkit/insights/agentic-interface/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">The Agentic Interface: Hybrid Conversational UI</a>
           <a href="/en/neuronkit/insights/agent-cage/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">The Agent’s Cage: Securing Autonomous Systems</a>
@@ -73,7 +73,7 @@
         </a>
 
         <!-- Card: From Clickstream to Dialogstream (HTML) -->
-        <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white dark:hover:bg-zinc-900 hover:shadow-md hover:-translate-y-0.5 transition duration-200">
+        <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white dark:hover:bg-zinc-900 hover:shadow-md hover:-translate-y-0.5 transition duration-200">
           <div class="text-xs uppercase tracking-wide text-zinc-500">Insight</div>
           <h2 class="mt-1 font-semibold">From Clicks to Conversations: A Visual Guide</h2>
           <p class="mt-2 text-sm text-zinc-600">A visual tour of the agentic shift and generative UI, with charts and diagrams.</p>
