--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -431,7 +431,7 @@ flowchart LR
           <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">How dialog streams and agentic UX reshape funnels, personalization, and measurement.</p>
         </a>
 
-        <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 transition duration-200">
+        <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 transition duration-200">
           <div class="text-xs uppercase tracking-wide text-zinc-500">Insight</div>
           <h3 class="mt-1 font-semibold">From Clickstream to Dialogstream</h3>
           <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">A visual tour of the agentic shift and generative UI.</p>
