--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -341,7 +341,7 @@ flowchart LR
           <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">对话流与 Agentic 体验如何重塑漏斗、个性化与度量体系。</p>
         </a>
 
-        <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 hover:-translate-y-0.5 transition duration-200">
+        <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 hover:-translate-y-0.5 transition duration-200">
           <div class="text-xs uppercase tracking-wide text-zinc-500">洞见</div>
           <h3 class="mt-1 font-semibold">从点击流到对话流（可视化）</h3>
           <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">图表展示 Agentic 转型与生成式 UI。</p>
