--- a/zh/neuronkit/insights/index.html
+++ b/zh/neuronkit/insights/index.html
@@ -51,7 +51,7 @@
         <div class="mt-1">
           <div class="px-3 text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">洞见</div>
           <a href="/zh/neuronkit/whitepaper/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">电商重构：从点击流到对话流</a>
-          <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">从点击到对话：可视化指南</a>
+          <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">从点击到对话：可视化指南</a>
           <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">Agent 沙箱实战手册</a>
           <a href="/zh/neuronkit/insights/agentic-interface/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">Agentic 界面：对话式混合UI设计</a>
           <a href="/zh/neuronkit/insights/agent-cage/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">智能体的牢笼：自治系统安全</a>
@@ -77,7 +77,7 @@
           <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-300">对话流与 Agentic 体验如何重塑漏斗、个性化与度量体系。</p>
         </a>
 
-        <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 hover:border-indigo-300 hover:shadow-md transition bg-white/50 dark:bg-zinc-900/60">
+        <a href="/zh/neuronkit/insights/from_clickstream_to_dialogstream/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 hover:border-indigo-300 hover:shadow-md transition bg-white/50 dark:bg-zinc-900/60">
           <div class="text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">洞见</div>
           <h2 class="mt-1 font-semibold">从点击到对话：可视化指南</h2>
           <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-300">图表展示 Agentic 转型与生成式 UI。</p>
