Add device context whitepaper

--- a/zh/neuronkit/insights/index.html
+++ b/zh/neuronkit/insights/index.html
@@ -56,6 +56,7 @@
           <a href="/zh/neuronkit/insights/agentic-interface/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">Agentic 界面：对话式混合UI设计</a>
           <a href="/zh/neuronkit/insights/agent-cage/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">智能体的牢笼：自治系统安全</a>
           <a href="/zh/neuronkit/insights/ai-agent-economy/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">智能体经济：AI时代的货币化</a>
+          <a href="/zh/neuronkit/insights/context-agent/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">主动式AI：设备端上下文</a>
           <a href="/zh/neuronkit/insights/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50 dark:hover:bg-zinc-900">洞见首页</a>
         </div>
         <div class="mt-2 grid gap-2">
@@ -105,6 +106,13 @@
           <div class="text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">报告</div>
           <h2 class="mt-1 font-semibold">智能体经济：AI时代的货币化</h2>
           <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-300">从眼球经济到智能体经济：AI 原生商业模型、金融基础设施与信任框架。</p>
+        </a>
+
+        <!-- Card: Context Agent (Device-side context) -->
+        <a href="/zh/neuronkit/insights/context-agent/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 hover:border-indigo-300 hover:shadow-md transition bg-white/50 dark:bg-zinc-900/60">
+          <div class="text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">白皮书</div>
+          <h2 class="mt-1 font-semibold">主动式AI：利用设备端上下文构建智能代理</h2>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-300">设备端信号全景分类与以同意为前提的 SDK 框架，帮助代理推断意图并主动行动。</p>
         </a>
       </div>
 
