--- a/en/neuronkit/insights/index.html
+++ b/en/neuronkit/insights/index.html
@@ -50,6 +50,7 @@
           <a href="/en/neuronkit/insights/agentic-interface/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">The Agentic Interface: Hybrid Conversational UI</a>
           <a href="/en/neuronkit/insights/agent-cage/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">The Agent’s Cage: Securing Autonomous Systems</a>
           <a href="/en/neuronkit/insights/ai-agent-economy/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">The Agentic Economy</a>
+          <a href="/en/neuronkit/insights/context-agent/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">The Proactive AI: Device-side Context</a>
           <a href="/en/neuronkit/insights/" class="block px-3 py-2 rounded-lg hover:bg-zinc-50">All Insights</a>
         </div>
         <div class="mt-2 grid gap-2">
@@ -105,6 +106,13 @@
           <div class="text-xs uppercase tracking-wide text-zinc-500">Report</div>
           <h2 class="mt-1 font-semibold">The Agentic Economy: A New Playbook for Monetization</h2>
           <p class="mt-2 text-sm text-zinc-600">From eyeballs to agents: AI-native pricing models, M2M payments, and trust frameworks.</p>
+        </a>
+
+        <!-- Card: Context Agent (Device-side context) -->
+        <a href="/en/neuronkit/insights/context-agent/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white dark:hover:bg-zinc-900 hover:shadow-md hover:-translate-y-0.5 transition duration-200">
+          <div class="text-xs uppercase tracking-wide text-zinc-500">Whitepaper</div>
+          <h2 class="mt-1 font-semibold">The Proactive AI: Leveraging Device-side Context</h2>
+          <p class="mt-2 text-sm text-zinc-600">A taxonomy of device signals and a framework for consent-driven SDKs that infer intent and act proactively.</p>
         </a>
       </div>
 
