Use fonts from CDN accessible from China for Chinese version

--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -157,7 +157,7 @@ layout: null
       <div class="h-16 flex items-center justify-between">
         <a href="#" class="flex items-center gap-2 font-semibold text-lg">
           <span class="inline-flex h-8 w-8 rounded-xl bg-gradient-to-br from-cyan-500 via-indigo-500 to-emerald-500"></span>
-          <span>NeuronKit</span>
+          <span>FinClip Neuronkit</span>
           <span class="ml-2 rounded-full px-2 py-0.5 text-xs bg-zinc-900 text-white dark:bg-white dark:text-zinc-900">Preview</span>
         </a>
         <!-- Desktop nav -->
