--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -8,9 +8,8 @@ layout: null
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>NeuronKit — Agentic 中间件</title>
   <meta name="description" content="让移动应用与 IoT 设备具备 Agentic 能力：设备侧沙箱、丰富上下文、云端记忆、对话式 UI。" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <!-- China-friendly Inter font via jsDelivr (variable font) -->
+  <link href="https://cdn.jsdelivr.net/npm/@fontsource-variable/inter@latest/index.css" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
   <script>
@@ -30,7 +29,7 @@ layout: null
   </script>
   <style>
     html { scroll-behavior: smooth; }
-    body { font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; }
+    body { font-family: "InterVariable", Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "PingFang SC", "Hiragino Sans GB", "Noto Sans CJK SC", "Microsoft YaHei", "Source Han Sans SC", "Segoe UI", Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", sans-serif; }
     .gradient-text { background: linear-gradient(90deg, #06b6d4 0%, #6366f1 50%, #22c55e 100%); background-clip: text; -webkit-background-clip: text; color: transparent; -webkit-text-fill-color: transparent; }
     .glass { background: rgba(255,255,255,0.6); backdrop-filter: blur(8px); }
     .dark .glass { background: rgba(9,9,11,0.35); }
@@ -67,7 +66,7 @@ layout: null
       <div class="h-16 flex items-center justify-between">
         <a href="#" class="flex items-center gap-2 font-semibold text-lg">
           <span class="inline-flex h-8 w-8 rounded-xl bg-gradient-to-br from-cyan-500 via-indigo-500 to-emerald-500"></span>
-          <span>NeuronKit</span>
+          <span>FinClip Neuronkit</span>
           <span class="ml-2 rounded-full px-2 py-0.5 text-xs bg-zinc-900 text-white dark:bg-white dark:text-zinc-900">预览</span>
         </a>
         <!-- Desktop nav -->
