--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -127,7 +127,7 @@ layout: null
           <div class="hero-wash"></div>
           <div class="mb-6">
             <h1 class="hero-glow text-4xl sm:text-5xl md:text-6xl font-extrabold tracking-tight leading-tight text-balance break-anywhere hyphens-auto">
-              应用觉醒，化身智能体
+              让App变身智能代理 - 无需重构！
             </h1>
             <p class="mt-4 text-xl sm:text-2xl leading-relaxed text-zinc-800 dark:text-zinc-100/95 max-w-2xl md:max-w-3xl text-pretty break-anywhere hyphens-auto">
               对话替代点击，智能直达体验。
