--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -264,7 +264,7 @@ layout: null
             <a href="#cta" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">Request Early Access</a>
             <a href="#whitepaper" class="px-5 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">Explore Insights</a>
           </div>
-          <div class="mt-6 text-sm text-zinc-600 dark:text-zinc-400">Cloud Brain, Device Hands. Full Control.</div>
+          <div class="mt-6 text-sm text-zinc-600 dark:text-zinc-400">Context Mddileware For Your App</div>
           <!-- Hero controls -->
           <div class="mt-4 flex items-center gap-2" aria-label="Hero variants" role="tablist">
             <button class="hero-dot h-2.5 w-2.5 rounded-full bg-zinc-400 aria-selected:bg-indigo-600" aria-selected="true" aria-controls="hero-a" role="tab" title="Variant A"></button>
@@ -425,29 +425,14 @@ flowchart LR
       <p class="mt-4 text-zinc-700 dark:text-zinc-300 max-w-3xl">Curated articles and reports. Explore deep dives, frameworks, and reference architectures.</p>
 
       <div class="mt-8 grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-        <a href="/en/neuronkit/whitepaper/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 transition duration-200">
-          <div class="text-xs uppercase tracking-wide text-zinc-500">Report</div>
-          <h3 class="mt-1 font-semibold">E‑commerce: Clickstream → Dialogstream</h3>
-          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">How dialog streams and agentic UX reshape funnels, personalization, and measurement.</p>
-        </a>
-
-        <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 transition duration-200">
+        {% assign insights = site.en_insights | sort: 'date' | reverse %}
+        {% for p in insights limit:6 %}
+        <a href="{{ p.url }}" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 transition duration-200">
           <div class="text-xs uppercase tracking-wide text-zinc-500">Insight</div>
-          <h3 class="mt-1 font-semibold">From Clickstream to Dialogstream</h3>
-          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">A visual tour of the agentic shift and generative UI.</p>
+          <h3 class="mt-1 font-semibold">{{ p.title }}</h3>
+          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">{{ p.description | default: p.excerpt | strip_html | truncate: 140 }}</p>
         </a>
-
-        <a href="/en/neuronkit/insights/sandboxing-for-agents/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 transition duration-200">
-          <div class="text-xs uppercase tracking-wide text-zinc-500">Whitepaper</div>
-          <h3 class="mt-1 font-semibold">Sandboxing for Agentic Systems</h3>
-          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">Taxonomy and patterns for securing agent‑generated actions.</p>
-        </a>
-
-        <a href="/en/neuronkit/insights/ai-agent-economy/" class="block p-5 rounded-2xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900/60 hover:bg-white hover:shadow-md dark:hover:bg-zinc-900 transition duration-200">
-          <div class="text-xs uppercase tracking-wide text-zinc-500">Report</div>
-          <h3 class="mt-1 font-semibold">The Agentic Economy</h3>
-          <p class="mt-2 text-sm text-zinc-600 dark:text-zinc-400">From eyeballs to agents: AI‑native pricing, M2M payments, and trust frameworks.</p>
-        </a>
+        {% endfor %}
       </div>
 
       <div class="mt-8">
@@ -476,7 +461,7 @@ flowchart LR
   <footer class="py-10 border-t border-zinc-200/60 dark:border-zinc-800/60">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row items-center justify-between gap-4">
       <p class="text-sm text-zinc-600 dark:text-zinc-400">  NeuronKit (Agentic Context SDK). Early preview.</p>
-      <p class="text-sm text-zinc-600 dark:text-zinc-400">Cloud Brain, Device Hands. Full Control.</p>
+      <p class="text-sm text-zinc-600 dark:text-zinc-400">Context middleware for your App</p>
       <div class="text-sm flex items-center gap-4">
         <a href="#" class="hover:text-indigo-600">Privacy</a>
         <a href="#" class="hover:text-indigo-600">Contact</a>
